# msprt

./: LICENSE  README.md  pyproject.toml
src/msprt/: __init__.py  msprt_.py
